--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,13 +11,8 @@
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
-            "environment": [
-                {
-                    "name": "OF_ROOT",
-                    "value": "/mnt/LinuxData/OF/openFrameworks"
-                }
-            ],
-            "externalConsole": true,
+            "environment": [],
+            "externalConsole": false,
             "preLaunchTask": "build (Debug)",
             "linux": {
                 "MIMode": "gdb"
@@ -36,16 +31,11 @@
             "program": "/bin/bash",
             "args": [
                 "-c",
-                "ssh -X pi@Rpi3Dev.local 'xterm -T ${workspaceFolderBasename}_armv7l -e' make -C ${workspaceFolder} RunDebug PLATFORM_ARCH='armv7l' PLATFORM_VARIANT='stretch' GST_VERSION='1.0'"
+                "ssh -X pi@mxReciver.local 'xterm -T ${workspaceFolderBasename}_armv7l -e' make -C ${workspaceFolder} RunDebug PLATFORM_ARCH='armv7l' GST_VERSION='1.0'"
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
-            "environment": [
-                {
-                    "name": "OF_ROOT",
-                    "value": "/mnt/LinuxData/OF/openFrameworks"
-                }
-            ],
+            "environment": [],
             "externalConsole": true,
             "preLaunchTask": "RPI3 Cross build",
             "linux": {
