--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -20,6 +20,24 @@
             "options": {}
         },
         {
+            "label": "RPI3 Cross build",
+            "type": "shell",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "windows": {
+                "command": "powershell"
+            },
+            "linux": {
+                "command": "bash"
+            },
+            "args": [
+                "-c",
+                "'PLATFORM_ARCH=armv7l GST_VERSION=1.0 TOOLCHAIN_ROOT=/mnt/LinuxData/Scripts/CrossRpi/rpi_toolchain-gcc6 RPI_ROOT=/opt/Rpi3DevRootfs make Debug'"
+            ]
+        },
+        {
             "label": "build & run (Release)",
             "type": "shell",
             "group": {
