--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,13 +25,36 @@
             }
         },
         {
+            "name": "Release",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "/usr/bin/make",
+            "args": [
+                "RunRelease"
+            ],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "preLaunchTask": "build (Release)",
+            "linux": {
+                "MIMode": "gdb"
+            },
+            "osx": {
+                "MIMode": "lldb"
+            },
+            "windows": {
+                "MIMode": "gdb"
+            }
+        },
+        {
             "name": "RPI3 Cross Debug",
             "type": "cppdbg",
             "request": "launch",
             "program": "/bin/bash",
             "args": [
                 "-c",
-                "ssh -X pi@mxReciver.local 'xterm -T ${workspaceFolderBasename}_armv7l -e' make -C ${workspaceFolder} RunDebug PLATFORM_ARCH='armv7l' GST_VERSION='1.0'"
+                "ssh -X pi@192.168.0.87 'xterm -T ${workspaceFolderBasename}_armv7l -e' make -C ${workspaceFolder} RunDebug PLATFORM_ARCH='armv7l' GST_VERSION='1.0'"
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
@@ -54,8 +77,10 @@
             "request": "launch",
             "program": "/bin/bash",
             "args": [
+                "-E",
                 "-c",
-                "ssh -X pi@Rpi3Dev.local 'xterm -T ${workspaceFolderBasename}_armv6l -e' make -C ${workspaceFolder} RunDebug PLATFORM_ARCH='armv6l' PLATFORM_VARIANT='stretch' GST_VERSION='1.0'"
+                //"ssh -X pi@Rpi3Dev.local 'xterm -T ${workspaceFolderBasename}_armv6l -e' make -C ${workspaceFolder} RunDebug PLATFORM_ARCH='armv6l' PLATFORM_VARIANT='stretch' GST_VERSION='1.0'"
+                "ssh -X pi@192.168.0.87 'lxpanel -T ${workspaceFolderBasename}_armv6l -e' make -C ${workspaceFolder} RunDebug PLATFORM_ARCH='armv6l' /*PLATFORM_VARIANT='stretch'*/ GST_VERSION='1.0'"
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
